# reccd

./: README.md  black.sh  clean.sh  flake8.sh  isort.cfg  isort.sh  mypy.ini  mypy.sh  project.dic  protocolization.sh  pytest.ini  pytest.sh  requirements.main.txt  requirements.txt  setup.cfg  setup.py  uninstall.sh
reccd/: __main__.py  arguments.py  entrypoint.py
reccd/aio/: connection.py
reccd/app/: cli.py
reccd/apps/: client.py  modules.py  server.py
reccd/argparse/: typing_namespace.py
reccd/config/: cfg_parse.py  servicer_config.py
reccd/daemon/: __init__.py  daemon_client.py  daemon_servicer.py
reccd/logging/: logging.py
reccd/memory/: shared_memory_queue.py  shared_memory_utils.py  shared_memory_validator.py
reccd/module/: module.py
reccd/package/: package_utils.py
reccd/packet/: content_helper.py  content_packer.py  content_parameter.py  content_unpacker.py  packer.py  parameter_matcher.py  response.py  unpacker.py
reccd/parse/: env_parse.py
reccd/plugin/: daemon_plugin.py  errors.py
reccd/route/: dynamic_resource.py
reccd/rpc/: client.py  server.py
reccd/uri/: rpc_uri.py  uds.py
reccd/variables/: aio.py  argparse.py  config.py  logging.py  module.py  plugin.py  port.py  rpc.py  system.py
test/: test_main.py
test/argparse/: test_namespace_utils.py  test_typing_namespace.py
test/config/: test_cfg_parse.py  test_servicer_config_complex.py
test/daemon/: daemon_test_case.py  test_daemon_performance.py  test_daemon_router.py
test/memory/: test_shared_memory_validator.py
tester/: test_entrypoint.py
(+33 files in other folders)
