[metadata]
name = reccd
description = Daemon helper for the ANSWER
version = attr: reccd.__version__
url = https://github.com/bogonets/reccd
author = zer0
author_email = osom8979@gmail.com
maintainer = zer0
maintainer_email = osom8979@gmail.com
project_urls =
    GitHub: issues = https://github.com/bogonets/reccd/issues
    GitHub: repo = https://github.com/bogonets/reccd
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
keywords =
    answer
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.9
packages = find:
tests_require = pytest

[options.packages.find]
exclude =
    tester*

[options.entry_points]
console_scripts =
    reccd = reccd.app.cli:main
